--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
         <h1>Webpack</h1>
     </div>
 
-    <div class="logo"></div>
+    <div class="bordered-block">
+        <div class="logo"></div>
+    </div>
 </body>
 </html>
